<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#FFFFFF"
    android:stretchColumns="1">

<!-- Row0 -->
<TableRow android:id="@+id/row0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"> 
    <TextView android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/nameLabel"
         android:layout_marginLeft="5sp"/>
    <EditText android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
         android:layout_marginRight="5sp"
         android:imeOptions="actionDone"/>
</TableRow>
<TableRow android:id="@+id/row1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"> 
    <TextView android:id="@+id/addrLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
         android:layout_marginLeft="5sp"
        android:text="@string/addrLabel"/>
    <EditText android:id="@+id/addrText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginRight="5sp"
        android:imeOptions="actionDone"/>
</TableRow>
<TableRow android:id="@+id/row2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"> 
    <TextView android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
         android:layout_marginLeft="5sp"
        android:text="@string/emailLabel"/>
    <EditText android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginRight="5sp"
        android:imeOptions="actionDone"/>
</TableRow>
<TableRow android:id="@+id/row3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"> 
    <TextView android:id="@+id/foneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
         android:layout_marginLeft="5sp"
        android:text="@string/foneLabel"/>
    <EditText android:id="@+id/foneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginRight="5sp"
        android:imeOptions="actionDone"/>
</TableRow>

<TableRow android:id="@+id/row4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"> 
    <View android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>
    <CheckBox android:id="@+id/NewsLetter"
        android:text="@string/newsletters" />
</TableRow>
<TableRow android:id="@+id/row5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"> 
    <Button android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"

        android:text="@string/submitButton"/>
    <Button android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dip"
        android:text="@string/resetButton"
        android:layout_gravity="left"/>
</TableRow>
</TableLayout>